Edited the final chapters

--- a/discussion.tex
+++ b/discussion.tex
@@ -2,10 +2,17 @@
 \section{Discussion}
 \label{sec:discussion}
 
-\subsection{Is digital language development necessary?}
+In this section, I ask whether digital language development is necessary; discuss the ethics of using open source software for LRLs; consider data and privacy as reasons why more code is not open source; and finally conclude with thoughts on whether open source can be adequately seen as a tool for saving languages.
 
-% Alexis: yes, in fact I think it's rather a different enterprise than defining language endangerment -- you may want to explicitly address the interaction between the two. what is your stance on the question? does lack of digital presence necessarily equate to language endangerment? (I think it's a very interesting question)
+\subsection{Is digital presence necessary?}
 
+In Section~\ref{subsubsec:response}, I pointed out how metrics of language endangerment come from a perspective that languages may need to be saved, and that external onlookers should be allowed to judge the status of languages they do not themselves speak, for communities they may not be intimately involved in. This viewpoint may not be reflective of the views of language speakers, themselves. It is not a view I feel comfortable with; as a researcher, that I was not able to evidentially contribute to Naskapi or Gaelic research while writing this paper except with a literature review and my own suggestions for best practices is unsettling. 
+
+One of the more interesting discoveries in this paper was that Gaelic was recorded by UNESCO as Definitely endangered, while Naskapi was marked as Vulnerable - a safer rating. This is interesting, as Gaelic has roughly sixty times the speaking population of Naskapi. However, it reflects the strength of the Naskapi community; almost all of the members of the community speak Naskapi, and it is used in all domains of life. However, this is happening without having technical tools like spell-checkers, wikipedias, or STT systems. 
+
+My questions regarding open source to the linguists working on the dictionary seemed vaguely off the mark. Open source, as a methodology, is useful in particular circumstances - namely, when there is a large suite of computational tools which can be used to improve the livelihood of speakers. This clearly would happen in large, Western industrialised places such as Scotland, if there are speakers who are more proficient in Gaelic than English. However, it is less clear whether open source - or much more technological advancement - would benefit the Naskapi community as much as the work currently ongoing there. Of course, it would be ideal if they were able to type with syllabics on a daily basis, and to read syllabics in all types of literature. But digital development may not be necessary to keep the language alive, at this stage. 
+
+The Naskapi are currently going through a metamorphic stage, still changing from their nomadic roots half a century ago and turning into a technology-dependent society. A new, fibre-optic cable internet connection is being laid this year from the coast; what lies ahead is uncertain.
 
 \subsection{Ethics and open source}
 \label{subsec:oss-ethics}
@@ -42,11 +49,11 @@ So: how can the open source methodology for software development low resource la
 
 The most blatant advantage of open source is that any code developed is in the public domain; anyone can access and use it. This frees up communities to work on their own code, and leads to language developers being able to improve their languages' tech without searching for large amounts of funding, or depending on collaboration with universities or enterprises which may have different incentives and timelines. By contributing to the digital commons, it is possible to raise the quality of code for everyone, and a rising tide lifts all boats.
 
-As \citet{streiter2006implementing} recommends, open source can also generate a shared community of researchers interested in maintaining a pool of resources. Open source can also enforce changes to be in the open, thus allowing community members to contribute to similar code. The social aspect of shared code should not be overlooked, as it allows newcomers to learn how to work with technology, and helps offload continued work from a few hardcore NLP practitioners. The more coders are available within an ecosystem, the more code in that system can be developed and ultimately used - if it is open sourced.
+As \citet{streiter2006implementing} recommends, open source can also generate a shared community of researchers interested in maintaining a pool of resources. Open source can also force changes to be made in the open (at least, with a copyleft license), thus allowing community members to contribute to similar code. The social aspect of shared code should not be overlooked, as it allows newcomers to learn how to work with technology, and helps offload continued work from a few hardcore NLP hobbyists. The more coders are available within an ecosystem, the more code in that system can be developed and ultimately used - if it is open sourced.
 
 As was clear from looking at Gaelic, open source code widely leads to accessibility and for language resource generation. The difficulty of finding resources does not mean that there are not any at the governmental, military, or enterprise level. However, what resources have been found have generally been open source; it is because Scannell and Bauer work largely with open source licensing that their work has been able to complement each other's and to build tooling around Gaelic resources. Hopefully, this trend will continue.
 
-On a more broad level, open source can certainly help language development for other LRLs through educational materials. Currently, software developers in the tens of thousands are learning how to code using open source tooling on GitHub. NLTK is one of the most popular projects on GitHub, and with almost a thousand citations on Google Scholar,\footnote{\href{https://scholar.google.com/scholar?q=NLTK}{https://scholar.google.com/scholar?q=NLTK}. \last{April~27}} it is popular with academics, too. Open source has allowed it to thrive. Students using it may go on to use its tooling for their own languages; and, as more digital natives learn to code and as more languages find their own language communities online, it is hoped that more languages will digitally ascend.
+On a more broad level, open source can certainly help language development for other LRLs through educational materials. Currently, software developers in the millions are learning how to code using open source tooling on GitHub. NLTK is one of the most popular projects on GitHub, and with almost a thousand citations on Google Scholar,\footnote{\href{https://scholar.google.com/scholar?q=NLTK}{https://scholar.google.com/scholar?q=NLTK}. \last{April~27}} it is popular with academics, too. Open source has allowed it to thrive. Students using it may go on to use its tooling for their own languages; and, as more digital natives learn to code and as more languages find their own language communities online, it is hoped that more languages will digitally ascend.
 
 % I covered this enough. I would just be repeating myself.
 % \subsection{Why is not more code open?}
