--- a/future-work.tex
+++ b/future-work.tex
@@ -29,11 +29,11 @@ This would be an interesting area of research, although it is unclear how easy i
 
 \subsection{Metrics for code usage in LREC or ACL papers}
 
-It should be possible to mine ACL or LREC papers for references to open source storage repositories. While this was not done for this paper, but a quantitative study of academic research and open source code storage would greatly facilitate discussion around linguistic coding and tooling. This could also go hand in hand with extending the Austin Principles of Data Citation in Linguistics \citet{AustinPrinciples2017} to apply to code objects, and by providing DOIs to all of the repositories extracted.
+It should be possible to mine ACL or LREC papers for references to open source storage repositories. While this was not done for this paper, a quantitative study of academic research and open source code storage would greatly facilitate discussion around linguistic coding and tooling. This could also go hand in hand with extending the Austin Principles of Data Citation in Linguistics \citep{AustinPrinciples2017} to apply to code objects, and by providing DOIs to all of the repositories extracted.
 
 \subsection{Development of an p2p storage system for linguistics code}
 
-While data collectors like META-SHARE go a long way towards collecting metadata, it would be fantastic to develop a p2p collection system for open source code in linguistics, using the process briefly outlined in Section~\ref{subsec:sharing-code-without-a-platform}. I have already put a subset of repositories listed on low-resource-languages into IPFS, by using a shell script to automatically extract all GitHub repositories from the list, to clone (download) them from GitHub, and then to add them into IPFS. Ideally, these repositories could then be pinned in IPFS by other nodes, which would involve publishing the process and results in an academic paper and then collaborating with research bodies and individual developers to help replicate the data. Ideally, a permanent, decentralised network could be created for scientific software, beyond linguistics data. This is an exciting area.
+While data collectors like META-SHARE go a long way towards collecting metadata, it would be interesting to develop a p2p collection system for open source code in linguistics, using the process briefly outlined in Section~\ref{subsec:sharing-code-without-a-platform}. I have already put a subset of repositories listed on low-resource-languages into IPFS, by using a shell script to automatically extract all GitHub repositories from the list, to clone (download) them from GitHub, and then to add them into IPFS. Ideally, these repositories could then be pinned in IPFS by other nodes, which would involve publishing the process and results in an academic paper and then collaborating with research bodies and individual developers to help replicate the data. Ideally, a permanent, decentralised network could be created for scientific software, beyond linguistics data. This is an exciting area.
 
 One suggestion would be to also invent a cryptocurrency to incentivise storage of linguistic data on a blockchain: "putting linguistics on the blockchain", as a colleague laughingly joked when I explained it. While initially humorous due to the dubious longevity of blockchain projects, the idea is technologically interesting, and warrants further research.
 
@@ -41,11 +41,10 @@ One suggestion would be to also invent a cryptocurrency to incentivise storage o
 
 The research here has highlighted many areas of research which could be opened on Gaelic and Naskapi. For instance, an \textit{n}-gram MT system for Gaelic may be feasible given the amount of bilingual data. For Naskapi, there is work to be done implementing UIs for syllabics that could be used in Facebook, Snapchat, Instagram, and other venues where there are lots of speakers using language technology. If nothing else, it would be interesting to run a quantitative study examining how much Naskapi is currently being used on social media by the Naskapi community, or to ask the Band Office for as many bilingual texts as they have to develop a semi-supervised MT system. More work here is needed.
 
-%
-%\subsection{Beyond Ethnologue}
-%
-%Ethnologue holds the keys of the ISO 639-3 standard, widely used and accepted around the globe. However, it is also a proprietary service, and has a paywall which limits usage. Glottolog and other open source efforts go a long way towards providing alternatives - Glottolog keeps its own ISO standards, for instance.
-%
+\subsection{Beyond Ethnologue}
+
+Ethnologue holds the keys of the ISO 639-3 standard, widely used and accepted around in NLP communities. However, it is also a proprietary service, and has a paywall which limits usage. Glottolog and other open source efforts go a long way towards providing alternatives - Glottolog keeps its own ISO standards, for instance. Working with Glottolog, it would be advantageous to use this hurdle as a means to strengthen ties between academic associations such as the Linguistic Society of America's Committee on Endangered Language Preservation and the Association of Computational Linguistics, among others like the LDC and the ELP, to try and give Glottolog or another open source alternative the resources needed to petition the ISO standard body to grant ISO 639 regulation for standardisation rights. This would enable access for all researchers and communities to the tools and data they need to set l10n and i18n codes as needed, as opposed to going through a closed-source body. This is an area needing extensive collaboration and legal advice, but a path I feel is worth going down.
+  
 %\subsection{Beyond Wikipedia}
 %
 %I will talk about the shortcomings of both Wikipedia as a service, and Ethnologue as a provider of language data. Specifically, I want to draw attention to how Wikipedia treats its long-term contributors, and how Ethnologue charges exorbitant fees for using its data, and what we can do to improve this.
