Add secion on Non-english-based programming languages
Closes #34

--- a/thesiscommands.sty
+++ b/thesiscommands.sty
@@ -296,10 +296,14 @@
 
 % Stop bugging me with minor errors
 % Turn on to check by eye \overfullrule=2cm
-\hbadness=99999 
+\hbadness=99999
 \hfuzz=20pt
 \vfuzz=20pt
 \vbadness=\maxdimen
+
+% Arabic
+\usepackage{arabtex}
+\usepackage{utf8}
 
 % IGT
 % Important; include last
