--- a/floss.tex
+++ b/floss.tex
@@ -90,7 +90,7 @@ Digital permanence is a larger issue than code placed in locations by individual
 
 Aside from the problem of code actively being stored, there is another issue with code rot. Over time, the ecosystem around which code is built changes, and it becomes harder to reproduce the original environment where code was installed and executed, leading to the code itself becoming less useful \citep{eide2010toward}. Some solutions to this problem involve using containers like Docker to emulate the original environment \citep{boettiger2015introduction}. While this research has largely been driven by a need to replicate scientific results \citep{schwab2000making, barnes2010publish, ince2012case}, it is also relevant outside of academic research to enterprise and community solutions to difficult coding problems, such as natural language processing.
 
-As computational languages naturally evolve, it is important to take into account that the code must also be maintained if it is going to find consistent usage. Maintenance is a difficult task that has few immediate incentives, and which generally involves long timelines. It involves not only solving bugs as they appear with general usage, but also ensuring that the code stays relevant in a changing ecosystem. No package exists or application exists by itself; each depends upon other code to run. This is especially true for software built using the Unix methodology of piecing together many small pieces of software that do one function well.\footnote{\href{http://www.catb.org/esr/writings/taoup/html/ch01s06.html}{http://www.catb.org/esr/writings/taoup/html/ch01s06.html}. \last{May~3}} Applications also depend upon code, though; as operating systems (OS) update, legacy maintenance is needed to ensure forward compatibility, or the code will become defunct as no one will be able to run it on current OSs. However, providing funding for maintenance at the OS timescale is exceedingly difficult. For more on this, see Section~\ref{subsec:oss-funding}.
+As computational languages naturally evolve, it is important to take into account that the code must also be maintained if it is going to find consistent usage. Maintenance is a difficult task that has few immediate incentives, and which generally involves long timelines. It involves not only solving bugs as they appear with general usage, but also ensuring that the code stays relevant in a changing ecosystem. No package exists or application exists by itself; each depends upon other code to run. This is especially true for software built using the Unix methodology of piecing together many small pieces of software that do one function well.\footnote{\href{http://www.catb.org/esr/writings/taoup/html/ch01s06.html}{http://www.catb.org/esr/writings/taoup/html/ch01s06.html}. \last{May~3}} Applications also depend upon code, though; as operating systems (OS) update, legacy maintenance is needed to ensure forward compatibility, or the code will become defunct as no one will be able to run it on current OSs. However, providing funding for maintenance at the OS timescale is exceedingly difficult.
 
 % Note: I moved Data and Privacy to section 4, because I want to talk about LRLs specifically there, and this is more of an issue for LRLs. I deleted the old Licensing and Liability section, as I already mentioned it.
 
@@ -115,5 +115,21 @@ One direct way is to add payment schemes directly to source code or to a website
 There are several guides online that outline other ways of funding open source.\footnote{\href{https://github.com/nayafia/lemonade-stand}{https://github.com/nayafia/lemonade-stand}. \last{May~2}}\footnote{\href{https://medium.com/open-source-life/money-and-open-source-d44a1953749c}{https://medium.com/open-source-life/money-and-open-source-d44a1953749c}. \last{May~2}}\footnote{\href{https://opensource.guide/getting-paid/}{https://opensource.guide/getting-paid/}. \last{May~2}} In the end, the majority of open source developers are not remunerated for their work directly. Most open source work is unpaid, and maintenance of open source software can be demanding and costly for developers who do not set expectations around levels of support for users. This is especially difficult for developers who do not have total control of their projects, such as is often the case with developers doing open source within a company.
 
 More specifically, the problem of funds being directed to low resource languages is unlikely to be solved by any of the proposed solutions above. However, by banding together and sharing tools openly \citep{streiter2006implementing}, computational linguists working on low resource languages can expedite their work. This methodology will be explored in Chapter~\ref{sec:lrl-code}.
+
+\subsection{Non-English programming languages}
+
+\setcode{utf8}
+
+So far, there has been no mention of coding itself happening in languages besides English. The vast majority of the open source world uses English in documentation of code resources and in the code language itself. The first is self-explanatory; for the second, take for example the common tokens `if` and `else`, used in conditionals. These could be written in another language, as they are English words, or in another script, such as Arabic. However, this is rare. There are some cases of programming languages themselves being written in other languages, such as \< قلب > (Qalb), which is written in Arabic.\footnote{\href{http://qlb-repl.herokuapp.com/}{http://qlb-repl.herokuapp.com/}. \last{May~3}} For Qalb, the popular `hello world' command would be written:
+
+\begin{arabtext}
+(قول "مرحبا يا عالم"‏)
+\end{arabtext}
+
+More commonly, coding in another language means using translations of very popular libraries documentation. For instance, the Node.js\footnote{\href{http://www.nodejs.org/}{http://www.nodejs.org/}. \last{May~3}} i18n committee\footnote{\href{https://github.com/nodejs/i18n/}{https://github.com/nodejs/i18n/}. \last{May~3}} is currently working on tools to translate the most popular JavaScript framework's documentation into a few popular languages, like Spanish and Portuguese. Often, these efforts depend upon bilingual volunteers, willing to translate documentation into another language.
+
+The Online Historical Encyclopaedia of Programming Languages's website\footnote{\href{http://www.hopl.info/}{http://www.hopl.info/}. \last{May~3}} notes that the vast majority of languages were created in English speaking countries.\footnote{\href{http://www.hopl.info/countriesreportgr.prx}{http://www.hopl.info/countriesreportgr.prx}. \last{May~3}} For the most part, languages which are written in other languages do not have the same amount of reach or ecosystem size as languages developed in English. All of the top 15 languages on GitHub in 2017 were based on English.\footnote{\href{https://octoverse.github.com/}{https://octoverse.github.com/}. \last{May~3}}
+
+That English is needed to code means that any coder wishing to developer resources in their native language will most likely need to use English or other major languages for the vast majority of the work. While solving this problem is out of scope here, it is worth mentioning this aspect of language resource development.
 
 % Note: I moved the entire section on ethics in open source to the Discussions chapter
