--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -8,4 +8,6 @@ This work also draws heavily on an open source repository on GitHub, for which G
 Writing this paper involved using LaTeX\footnote{\href{https://www.latex-project.org/}{https://www.latex-project.org/}. \last{May~1}} typeset with TeXShop\footnote{\href{http://pages.uoregon.edu/koch/texshop/}{http://pages.uoregon.edu/koch/texshop/}. \last{May~1}};
 {\tt checkcites}\footnote{\href{https://www.ctan.org/pkg/checkcites}{https://www.ctan.org/pkg/checkcites}. \last{May~3}} and {\tt apalike-refs}\footnote{\href{https://github.com/matthieu-vergne/LaTeX}{https://github.com/matthieu-vergne/LaTeX}. \last{May~3}}; Atom\footnote{\href{https://atom.io/}{https://atom.io/}. \last{May~1}}; iTerm\footnote{\href{https://iterm2.com/}{https://iterm2.com/}. \last{May~1}}; Firefox\footnote{\href{https://www.mozilla.org/en-US/firefox/}{https://www.mozilla.org/en-US/firefox/}. \last{May~1}}; Bash\footnote{\href{https://www.gnu.org/software/bash/}{https://www.gnu.org/software/bash/}. \last{May~1}}; and Mac OSX 10.13\footnote{\href{https://www.apple.com/macos/high-sierra/}{https://www.apple.com/macos/high-sierra/}. \last{May~1}}; among a suite of other closed and open source tools. I used TravisCI\footnote{\href{https://travis-ci.org}{https://travis-ci.org}. \last{May~2}} to ensure link validity, and stored all of the code and files for this thesis on GitHub.\footnote{\href{https://github.com/RichardLitt/thesis}{https://github.com/RichardLitt/thesis}. Last accessed \today.}
 
-Where it was more efficient to refer to a website as a footnote, I have done so; some of the resources thus acknowledged may have a publication that I also could have referred to. I have had to date no proofreaders for this paper, so all errors are mine and mine alone. I have also endeavoured to make reading this interesting, and if my particular brand of dry humour comes off as egotistical, I had it coming. My apologies. 
+All code segments mentioned in this thesis are open source in a Bash script at https://github.com/RichardLitt/thesis\footnote{\href{https://github.com/RichardLitt/thesis}{https://github.com/RichardLitt/thesis}. \last{May~4}} and on IPFS under the hash {\tt Qmddxu77uTb1UGi4Vkr5\-g79RedyFVLeySZ4ZL\-2WVJtmEqC}\footnote{\href{https://ipfs.io/ipfs/Qmddxu77uTb1UGi4Vkr5g79RedyFVLeySZ4ZL2WVJtmEqC}{https://ipfs.io/ipfs/Qmddxu77uTb1UGi4Vkr5g79RedyFVLeySZ4ZL2WVJtmEqC}. \last{May~4}}; to run them, download {\tt commands.sh} and type {\tt sh commands.sh} in your terminal.
+
+Where it was more efficient to refer to a website as a footnote, I have done so; some of the resources thus acknowledged may have a publication that I also could have referred to. I have had to date no proofreaders for this paper, so all errors are mine and mine alone. I have also endeavoured to make reading this interesting, and if my particular brand of dry humour comes off as egotistical, I had it coming. My apologies.
