--- a/references.bib
+++ b/references.bib
@@ -4,7 +4,7 @@
   url={https://www.ethnologue.com/about/language-status},
   year={2018},
   author={Lewis, M Paul and Simons, Gary F and Fennig, Charles D and others},
-  note={Last accessed April~24, 2018.}
+  note={\last{April~24}}
 }
 
 @inproceedings{bird2014aikuma,
@@ -99,7 +99,7 @@
   publisher={University of Hawai'i Press},
   volume={2},
   number={2},
-  pages={325–331},
+  pages={325-331},
   doi={http://hdl.handle.net/10125/4350}
 }
 
@@ -180,16 +180,16 @@
 
 
 @InProceedings{LittEdulearn,
-  author    = {Richard Littauer and Antonia Scheidel and Marc Schulder and Sibel Ciddi},
-  title     = {Crowd Sourcing the Classroom: Interactive Applications in Higher Learning},
+  author  = {Richard Littauer and Antonia Scheidel and Marc Schulder and Sibel Ciddi},
+  title   = {Crowd Sourcing the Classroom: Interactive Applications in Higher Learning},
   booktitle = {Proceedings of the 4th International Conference on Education and New Learning Technologies (EDULEARN12)},
-  month     = {July},
-  year      = {2012},
-  pages     = {1473-1481},
+  month   = {July},
+  year  = {2012},
+  pages   = {1473-1481},
   publisher = {International Association of Technology, Education and Development (IATED)},
-  editor    = {L. G\'omez Chova, L. and I. Candel Torres and A. L\'opez Mart\'inez},
-  address   = {Barcelona, Spain},
-  ibsn      = {978-84-695-3491-5},
+  editor  = {L. G\'omez Chova, L. and I. Candel Torres and A. L\'opez Mart\'inez},
+  address = {Barcelona, Spain},
+  ibsn  = {978-84-695-3491-5},
 }
 
 
@@ -203,11 +203,11 @@
 }
 
 @inproceedings{LittIDCC,
-	Author    = {Richard Littauer and Karthik Ram and Bertram Lud{\"a}scher and William Michener and Rebecca Koskela},
-	booktitle   = {7th International Digital Curation Conference Proceedings},
-	Month     = {December},
-	Title     = {Trends in Use of Scientific Workflows: Insights from a Public Repository and Guidelines for Best Practices.},
-	Year      = {2011}
+	Author  = {Richard Littauer and Karthik Ram and Bertram Lud{\"a}scher and William Michener and Rebecca Koskela},
+	booktitle = {7th International Digital Curation Conference Proceedings},
+	Month   = {December},
+	Title   = {Trends in Use of Scientific Workflows: Insights from a Public Repository and Guidelines for Best Practices.},
+	Year  = {2011}
 }
 
 
@@ -259,43 +259,43 @@
 
 
 @article{DBLP:journals/corr/KatzCWHVHSJCCVL15,
-  author    = {Daniel S. Katz and
-               Sou{-}Cheng T. Choi and
-               Nancy Wilkins{-}Diehr and
-               Neil Chue Hong and
-               Colin C. Venters and
-               James Howison and
-               Frank J. Seinstra and
-               Matthew Jones and
-               Karen Cranston and
-               Thomas L. Clune and
-               Miguel de Val{-}Borro and
-               Richard Littauer},
-  title     = {Report on the Second Workshop on Sustainable Software for Science:
-               Practice and Experiences {(WSSSPE2)}},
-  journal   = {Computing Research Repository (CoRR)},
-  volume    = {abs/1507.01715},
-  year      = {2015},
-  url       = {https://arxiv.org/abs/1507.01715},
-  note      = {Last accessed May~1, 2018},
-  doi       = {10.5334/jors.85},
+  author  = {Daniel S. Katz and
+     Sou{-}Cheng T. Choi and
+     Nancy Wilkins{-}Diehr and
+     Neil Chue Hong and
+     Colin C. Venters and
+     James Howison and
+     Frank J. Seinstra and
+     Matthew Jones and
+     Karen Cranston and
+     Thomas L. Clune and
+     Miguel de Val{-}Borro and
+     Richard Littauer},
+  title   = {Report on the Second Workshop on Sustainable Software for Science:
+     Practice and Experiences {(WSSSPE2)}},
+  journal = {Computing Research Repository (CoRR)},
+  volume  = {abs/1507.01715},
+  year  = {2015},
+  url   = {https://arxiv.org/abs/1507.01715},
+  note  = {\last{May~1}},
+  doi   = {10.5334/jors.85},
   archivePrefix = {arXiv},
-  eprint    = {1507.01715},
+  eprint  = {1507.01715},
   timestamp = {Wed, 07 Jun 2017 14:40:14 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/corr/KatzCWHVHSJCCVL15},
+  biburl  = {https://dblp.org/rec/bib/journals/corr/KatzCWHVHSJCCVL15},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 
 @InProceedings{littauer2012visualizing,
-  title     = {Visualising Typological Relationships: Plotting {WALS} with Heat Maps},
-  author    = {Richard Littauer and Rory Turnbull and Alexis Palmer},
+  title   = {Visualising Typological Relationships: Plotting {WALS} with Heat Maps},
+  author  = {Richard Littauer and Rory Turnbull and Alexis Palmer},
   booktitle = {Proceedings of the EACL 2012 Workshop on the Visualization of Linguistic Patterns},
-  month     = {April},
-  year      = {2012},
-  address   = {Avignon, France},
+  month   = {April},
+  year  = {2012},
+  address = {Avignon, France},
   publisher = {Association for Computational Linguistics},
-  pages     = {4},
+  pages   = {4},
 }
 
 
@@ -367,7 +367,7 @@
   author={Simons, G and Bird, S},
   journal={Open Language Archives Community},
   url={http://olac.ldc.upenn.edu/OLAC/protocol.html},
-  note={Last accessed May~1, 2018},
+  note={\last{May~1}},
   year={2001}
 }
 
@@ -376,7 +376,7 @@
   title={Dublin {Core} metadata element set, version 1.1: Reference description},
   author={Dublin Core Metadata Initiative and others},
   url={http://dublincore.org/documents/dces/},
-  note={Last accessed May~1, 2018},
+  note={\last{May~1}},
   year={1998}
 }
 
@@ -575,20 +575,20 @@ publisher={Blackwell}
   title={Reproducible research is still a challenge},
   author={FitzJohn, Rich and Pennell, Matt and Zanne, Amy and Cornwell, Will},
   url={https://ropensci.org/blog/2014/06/09/reproducibility/},
-  note={Last accessed May~1, 2018},
+  note={\last{May~1}},
   year={2014}
 }
 
 @misc{AustinPrinciples2017,
   title =  {The {Austin} Principles of Data Citation in Linguistics},
   author = {Andrea L. Berez-Kroeker and Helene N. Andreassen and
-                  Lauren Gawne and Gary Holton and Susan Smythe Kung
-                  and Peter Pulsifer and Lauren B. Collister and {the
-                  Data Citation and Attribution in Linguistics Group}
-                  and {the Linguistics Data Interest Group}},
+      Lauren Gawne and Gary Holton and Susan Smythe Kung
+      and Peter Pulsifer and Lauren B. Collister and {the
+      Data Citation and Attribution in Linguistics Group}
+      and {the Linguistics Data Interest Group}},
   year =  2017,
-  url  =   {http://site.uit.no/linguisticsdatacitation/austinprinciples/},
-  note = {Draft, Version 0.1. Last accessed May~1, 2018}
+  url  = {http://site.uit.no/linguisticsdatacitation/austinprinciples/},
+  note = {Draft, Version 0.1. \last{May~1}}
 }
 
 @inproceedings{calzolari2012lre,
@@ -682,7 +682,7 @@ publisher={Blackwell}
   year={2018},
   publisher={Learn Na'vi},
   url={http://eanaeltu.learnnavi.org/dicts/NaviDictionary.pdf},
-  note={Last accessed May~1, 2018}
+  note={\last{May~1}}
 }
 
 @book{dothrakidictionary,
@@ -691,7 +691,7 @@ publisher={Blackwell}
   year={2016},
   publisher={Learn Dothraki},
   url={https://docs.dothraki.org/Dothraki.pdf},
-  note={Last accessed May~3, 2018}
+  note={\last{May~3}}
 }
 
 @book{wmannis,
@@ -700,7 +700,7 @@ publisher={Blackwell}
   year={2018},
   publisher={learnnavi.org},
   url={https://files.learnnavi.org/docs/horen-lenavi.pdf},
-  note= {Last accessed May~1, 2018}
+  note= {\last{May~1}}
 }
 
 @article{shah2006motivation,
@@ -868,7 +868,7 @@ publisher={Blackwell}
   series={Northern European Association for Language Technology (NEALT) Proceedings Series},
   year={2009},
   url={https://dspace.ut.ee/handle/10062/9670},
-  note={Last accessed May~1, 2018},
+  note={\last{May~1}},
 }
 
 @article{streiter2006implementing,
@@ -947,12 +947,12 @@ publisher={Blackwell}
 
 @inproceedings{CCURL,
 	Author  = {Littauer, Richard and Paterson III, Hugh},
-	Title   = {Open Source Code Serving Endangered Languages},
+	Title = {Open Source Code Serving Endangered Languages},
 	Booktitle = {Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity ({CCURL}) Workshop},
   Editor  = {Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell, Kevin and Wandl-Vogt, Eveline},
   Address  = {Portoro\v{z}, Slovenia},
   pages = {86-88},
-	Year   = {2016}
+	Year = {2016}
 }
 
 @article{jancewicz2002applied,
@@ -1054,7 +1054,7 @@ publisher={Blackwell}
   title={{UNESCO} Atlas of the World's Languages in Danger},
   author={UNESCO, Atlas},
   year={2014},
-  note={Last accessed May~1, 2018},
+  note={\last{May~1}},
   url={http://www.unesco.org/languages-atlas/}
 }
 
@@ -1227,7 +1227,7 @@ title = {Directory International cooperation programs for the protection and pro
   author = {UNESCO},
   year = {2011},
   url= {http://www.unesco.org/new/fileadmin/MULTIMEDIA/HQ/CLT/pdf/International\%20cooperation\%20programs.pdf},
-  note={Last accessed May~1, 2018}
+  note={\last{May~1}}
 }
 
 @article{brenzinger2003language,
@@ -1250,7 +1250,7 @@ title = {Directory International cooperation programs for the protection and pro
  location = {Edinburgh, Scotland},
  numpages = {11},
  url = {https://dl.acm.org/citation.cfm?id=2132960.2133030},
- note = {Last accessed May~1, 2018},
+ note = {\last{May~1}},
  acmid = {2133030},
  organization = {Association for Computational Linguistics},
  publisher = {Association for Computational Linguistics},
@@ -1785,17 +1785,17 @@ title = {Directory International cooperation programs for the protection and pro
   year={2012},
   title={{Carnegie Mellon} releases data on {Haitian Creole} to hasten development of translation tools},
   url={https://www.eurekalert.org/pub_releases/2010-01/cmu-cmr012710.php},
-  note={Last accessed May~1, 2018}
+  note={\last{May~1}}
 }
 
 @book{phoible,
-  address   = {Leipzig},
-  editor    = {Steven Moran and Daniel McCloy and Richard Wright},
+  address = {Leipzig},
+  editor  = {Steven Moran and Daniel McCloy and Richard Wright},
   publisher = {Max Planck Institute for Evolutionary Anthropology},
-  title     = {PHOIBLE Online},
-  url       = {http://phoible.org/},
-  note      = {Last accessed May~1, 2018},
-  year      = {2014}
+  title   = {PHOIBLE Online},
+  url   = {http://phoible.org/},
+  note  = {\last{May~1}},
+  year  = {2014}
 }
 
 @incollection{mariani2015language,
@@ -1882,10 +1882,10 @@ title = {Directory International cooperation programs for the protection and pro
  author  = {Lenore A. Grenoble},
  booktitle = {The {Cambridge} Handbook of Endangered Languages},
  editor  = {Peter K. Austin and Julia Sallabank},
- pages   = {27-45},
+ pages = {27-45},
  publisher = {Cambridge University Press},
- title   = {Language Ecology and Endangerment},
- year   = {2011}
+ title = {Language Ecology and Endangerment},
+ year = {2011}
 }
 
 @article{newman1998we,
@@ -1899,20 +1899,20 @@ title = {Directory International cooperation programs for the protection and pro
 }
 
 @book{wals,
-  address   = {Leipzig},
-  editor    = {Matthew S. Dryer and Martin Haspelmath},
+  address = {Leipzig},
+  editor  = {Matthew S. Dryer and Martin Haspelmath},
   publisher = {Max Planck Institute for Evolutionary Anthropology},
-  title     = {{WALS} Online},
-  url       = {http://wals.info/},
-  note      = {Last accessed May~1, 2018},
-  year      = {2013}
+  title   = {{WALS} Online},
+  url   = {http://wals.info/},
+  note  = {\last{May~1}},
+  year  = {2013}
 }
 
 @misc{ager2008omniglot,
   title={Omniglot writing systems and languages of the world},
   author={Ager, Simon},
   url={http://omniglot.com},
-  note={Last accessed May~1, 2018},
+  note={\last{May~1}},
   year={2018}
 }
 
@@ -1922,7 +1922,7 @@ title = {Directory International cooperation programs for the protection and pro
   title ={Wikipedia --- {W}ikipedia{,} The Free Encyclopedia},
   year = "2018",
   url = {https://en.wikipedia.org/wiki/Wikipedia},
-  note = "Last accessed April~17, 2018"
+  note = {\last{April~17}}
 }
 
 
@@ -1931,7 +1931,7 @@ title = {Directory International cooperation programs for the protection and pro
   author={Hammarstr{\"o}m, Harald and Forkel, Robert and Haspelmath, Martin and Bank, Sebastian},
   journal={Leipzig: Max Planck Institute for Evolutionary Anthropology},
   url={http://glottolog.org},
-  note = {Last accessed May~1, 2018},
+  note = {\last{May~1}},
   year={2015}
 }
 
@@ -1947,13 +1947,13 @@ title = {Directory International cooperation programs for the protection and pro
 
 @inbook{wals-141,
  author  = {Bernard Comrie},
- title   = {Writing Systems},
+ title = {Writing Systems},
  publisher = {Max Planck Institute for Evolutionary Anthropology},
  chapter = 141,
- url    = {http://wals.info/chapter/141},
- note={Last accessed May~1, 2018},
- year   = {2013},
- book   = "wals"
+ url  = {http://wals.info/chapter/141},
+ note={\last{May~1}},
+ year = {2013},
+ book = "wals"
 }
 
 @article{simons2003open,
@@ -1997,10 +1997,10 @@ title = {Directory International cooperation programs for the protection and pro
 
 @book{MacKenzie-and-Jancewicz-1994,
  address  = {Kawawachikamach, Quebec},
- author   = {MacKenzie, Marguerite and Jancewicz, Bill},
+ author = {MacKenzie, Marguerite and Jancewicz, Bill},
  publisher = {Naskapi Development Corporation},
- title   = {Naskapi Lexicon},
- year    = {1994},
+ title = {Naskapi Lexicon},
+ year  = {1994},
  iso_code  = {nsk},
  olac_field = {syntax; general_linguistics; typology},
  wals_code = {nsk}
@@ -2039,6 +2039,6 @@ title = {Directory International cooperation programs for the protection and pro
  year={2007},
  isbn={978-0-88843-557-8},
  url={https://www.scriptureearth.org/data/nsk/PDF/00-WNTnsk-web.pdf},
- note={Last accessed May~1, 2018},
+ note={\last{May~1}},
  publisher={Naskapi Development Corporation and Wycliffe Bible Translators}
 }
